feat: Add the ability to process underscore variables